--- a/Applications/AllocationsServer/AllocationsServer.csproj
+++ b/Applications/AllocationsServer/AllocationsServer.csproj
@@ -6,6 +6,7 @@
     <Folder Include="wwwroot\" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="3.0.0" />
     <ProjectReference Include="../../Components/Allocations/Allocations.csproj" />
     <ProjectReference Include="../../Components/DefaultRoute/DefaultRoute.csproj" />
     <PackageReference Include="Steeltoe.CloudFoundry.Connector.EFCore" Version="2.1.0" />
