--- a/Applications/TimesheetsServer/TimesheetsServer.csproj
+++ b/Applications/TimesheetsServer/TimesheetsServer.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Pivotal.Discovery.ClientCore" Version="2.1.0" />
     <PackageReference Include="Steeltoe.Extensions.Configuration.CloudFoundryCore" Version="2.1.0" />
+    <PackageReference Include="Steeltoe.Security.Authentication.CloudFoundryCore" Version="2.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="3.0.0" />
     <ProjectReference Include="../../Components/Timesheets/Timesheets.csproj" />
     <ProjectReference Include="../../Components/DefaultRoute/DefaultRoute.csproj" />
